Add env.example and ignore real .env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,18 @@
-TWITCH_BOT_USERNAME=yourbotaccount
-TWITCH_OAUTH_TOKEN=oauth:xxxxxxxxxxxxxxxx
-TWITCH_CHANNEL=yourmainchannel
-PORT=3000
+# Twitch Relay Example Configuration
+# ---------------------------------
+# Copy this file to ".env" and replace values with your own
+
+# Twitch bot account username (this is the account you created just for the bot)
+TWITCH_BOT_USERNAME=YourBotUsernameHere
+
+# OAuth token for the bot account
+# IMPORTANT: Must start with "oauth:" (include it when pasting the token)
+# Example: oauth:abcd1234efgh5678ijkl
+TWITCH_OAUTH=oauth:YourOAuthTokenHere
+
+# The main channel that the bot should join (your streamer account)
+TWITCH_CHANNEL=YourStreamerChannelNameHere
+
+# Port your relay server will run on
+# Render usually assigns this automatically, but you can set a default for local testing
+PORT=10000
